2001-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (OptimizePath) new method; optimize
	  path to cd to in ExpandTildeInCWD.
	* GetFileInfo.cc: try the file as directory even if showdir, to
	  return type info; use server returned error message; don't give up
	  if the file is not in FileSet.

2001-12-13  Glenn Maynard <g_ld@zewt.org>

	* ChmodJob.cc: cosmetics.
	* FindJob.cc: fix mem leak; fix status.
	* GetFileInfo.cc: move the ~ and / special case check after the initial
	  chdir.
	* NetAccess.cc: fix status message.

2001-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.h: rename Find to FindFileSet.
	* LsCache.cc: fixed test for fset reusability in FindFileSet;
	  fixed FindFileSet calling in IsDirectory - restore cwd first and
	  don't delete fset.

2001-12-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ChmodJob.cc: handle undefined mode correctly.
	* misc.cc: fix dirname_alloc to strip all trailing slashes and
	  return / for /file.
	* FindJob.cc, FindJob.h, GetFileInfo.cc: support URLs and ~ in find;
	  print URL if processing an URL.

2001-12-11  Glenn Maynard <g_ld@zewt.org>

	* ChmodJob.cc, ChmodJob.h: Add relative paths, -v, -c, -R.  Maintain
          simple numeric mode interface.
	* FileSetOutput.cc: make sure "cls -ld ." shows the directory, even
          without "show_dots".
	* FindJob.cc, FindJob.h: Accept files as well as directories to NextDir().
          Pass top-level path to ProcessFile. Don't get listing if we don't need it.
	* FindJobDu.cc: print files with "du filename" even without -a.
	* GetFileInfo.cc, GetFileInfo.h: Make prefixing the path optional.
          Add member to find out whether the given path was a file or directory.
          Fix verification with ".." at the end of path.
          If ".." was requested (with show_dirs on), return "..", not the
          name of the directory, etc.
	* TreatFileJob.cc, TreatFileJob.h: Derive from FinderJob.  AddFile() no